--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -43,10 +43,10 @@ jobs:
         sudo \
           ${HOME}/sync/imgsync sync \
           --db ${HOME}/sync/bolt.db \
-          --push-to registry.aliyuncs.com \
+          --push-to registry.cn-hangzhou.aliyuncs.com \
           --password ${{ secrets.PASS }}  \
-          --push-ns=k8sxio  \
-          --user zhangguanzhang@qq.com  \
+          --push-ns=k8s-xlh001  \
+          --user 2402324010@qq.com  \
           --command-timeout ${TMOUT:=2h}  \
           --process-limit ${PROCESS:=2} \
           --img-timeout ${IMG_TMOUT:=10m} \
